add getAccount api
