# src/openapi.yaml
@@ -10,9 +10,30 @@ servers:
     description: Local machinie
 
 paths:
-  /assets:
+  /accounts:
     get:
+      tags: [Account]
+      summary: Get a list of all accounts
+      responses:
+        '200':
+          description: A list of accounts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Account'
+  /accounts/{accountString}/assets:
+    get:
+      tags: [Asset]
       summary: Get a list of all assets
+      parameters:
+        - name: accountString
+          description: アカウントの接続文字列
+          in: path
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: A list of assets
@@ -23,7 +44,15 @@ paths:
                 items:
                   $ref: '#/components/schemas/Asset'
     post:
+      tags: [Asset]
       summary: Create a new asset
+      parameters:
+        - name: accountString
+          description: アカウントの接続文字列
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -36,11 +65,19 @@ paths:
         '400':
           description: Invalid input
 
-  /assets/{assetId}:
+  /accounts/{accountString}/assets/{assetId}:
     delete:
+      tags: [Asset]
       summary: Delete an asset
       parameters:
         - name: assetId
+          description: 資産の一意識別子
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: accountString
+          description: アカウントの接続文字列
           in: path
           required: true
           schema:
@@ -158,3 +195,18 @@ components:
         - assetSubclassId
         - name
         - value
+    Account:
+      type: object
+      properties:
+        name:
+          type: string
+          description: アカウントの名前
+        id:
+          type: string
+          description: アカウントの一意識別子
+        subAccountIdHash:
+          type: string
+          description: アカウント制御の一意識別子
+        accountString:
+          type: string
+          description: アカウントの接続文字列
